<resources>
    <string name="app_name">Conversor Moedas</string>
    <string name="conversor_de_moedas">Conversor de Moedas</string>
    <string name="todo">TODO</string>
    <string name="button">INICIAR</string>
    <string name="qual_o_valor_em_real">Qual o valor em real?</string>
    <string name="valor_em_dolar">Valor em Dolar ($1,00 = R$4,00)</string>
    <string name="valor_em_euro">Valor em Euro (€1,00 = R$5,00)</string>
    <string name="informe_valor">Informe um valor!</string>
    <string name="calcular">CALCULAR</string>
    <string name="moedas">Índice Big Mac</string>


</resources>
